View applications for asset on manage field/facility page (#447)